--- a/about.html
+++ b/about.html
@@ -670,8 +670,8 @@
     <section class="about-section">
         <div class="about-content">
             <h2 class="section-title" data-aos="fade-up">Our Story</h2>
-            <p data-aos="fade-up" data-aos-delay="100">Poshan Care was founded in 2025 with a simple yet powerful mission: to fight childhood malnutrition and ensure every child has access to nutritious meals. Our journey began with a small team of passionate individuals who believed that no child should go hungry.</p>
-            <p data-aos="fade-up" data-aos-delay="200">Today, we work tirelessly to provide life-saving nutrition, promote healthy eating habits, and empower communities to break the cycle of malnutrition. We are driven by the belief that every child deserves a chance to thrive. Through partnerships, donations, and community programs, we have impacted thousands of lives and continue to expand our reach.</p>
+            <p data-aos="fade-up" data-aos-delay="100">Poshan Care was created during the Genesis hackathon at Providence College Of Engineering with a simple yet powerful mission: to fight childhood malnutrition and ensure every child has access to nutritious meals. Our journey began when our team of student developers came together with a shared vision that no child should go hungry.</p>
+            <p data-aos="fade-up" data-aos-delay="200">Through this platform, we aim to provide a way to connect donors with communities in need, promote healthy eating habits, and empower local organizations to break the cycle of malnutrition. We are driven by the belief that every child deserves a chance to thrive, and we designed Poshan Care to help make that possible across India.</p>
         </div>
     </section>
 
@@ -681,37 +681,37 @@
         <div class="timeline">
             <div class="timeline-item" data-aos="fade-right">
                 <div class="timeline-content">
-                    <span class="timeline-date">2025</span>
-                    <h3>The Beginning</h3>
-                    <p>Poshan Care was founded by a group of nutritionists and social workers concerned about the rising rates of childhood malnutrition.</p>
+                    <span class="timeline-date">Day 1</span>
+                    <h3>Genesis Hackathon Kickoff</h3>
+                    <p>Poshan Care was conceptualized during the national-level Genesis hackathon at Providence College Of Engineering and School Of Business with a mission to address childhood malnutrition in India.</p>
                 </div>
             </div>
             <div class="timeline-item" data-aos="fade-left">
                 <div class="timeline-content">
-                    <span class="timeline-date">2026</span>
-                    <h3>First Community Program</h3>
-                    <p>Launched our first nutrition program in a rural community, providing meals to 100 children daily.</p>
+                    <span class="timeline-date">Day 1</span>
+                    <h3>Research & Planning</h3>
+                    <p>Our team conducted intensive research on malnutrition statistics, identified key problem areas, and developed our initial project blueprint within the first few hours.</p>
                 </div>
             </div>
             <div class="timeline-item" data-aos="fade-right">
                 <div class="timeline-content">
-                    <span class="timeline-date">2027</span>
-                    <h3>Expanding Our Reach</h3>
-                    <p>Expanded to 5 more communities and established partnerships with local schools and healthcare facilities.</p>
+                    <span class="timeline-date">Day 1</span>
+                    <h3>Design & Development</h3>
+                    <p>We designed the user interface focusing on accessibility and user experience, while building a platform that could effectively connect donors with communities in need.</p>
                 </div>
             </div>
             <div class="timeline-item" data-aos="fade-left">
                 <div class="timeline-content">
-                    <span class="timeline-date">2028</span>
-                    <h3>Education Initiative</h3>
-                    <p>Launched our nutrition education program for parents and caregivers, teaching sustainable healthy eating practices.</p>
+                    <span class="timeline-date">Day 2</span>
+                    <h3>Implementation & Testing</h3>
+                    <p>After coding through the night, we implemented core features, conducted user testing, and refined the platform based on mentor feedback and technical evaluations.</p>
                 </div>
             </div>
             <div class="timeline-item" data-aos="fade-right">
                 <div class="timeline-content">
-                    <span class="timeline-date">Present</span>
-                    <h3>Growing Impact</h3>
-                    <p>Now serving over 5,000 children across 25 communities with nutritious meals and education programs.</p>
+                    <span class="timeline-date">Day 2</span>
+                    <h3>Project Completion</h3>
+                    <p>We successfully completed Poshan Care within the 24-hour hackathon deadline, presenting a fully functional website with the potential to make a real impact on childhood nutrition in India.</p>
                 </div>
             </div>
         </div>
@@ -720,13 +720,13 @@
     <!-- Team Section -->
     <section class="team-section">
         <h2 class="section-title" data-aos="fade-up">Our Team</h2>
-        <p data-aos="fade-up" data-aos-delay="100">Our team is made up of dedicated professionals, volunteers, and advocates who are committed to making a difference. From nutritionists and healthcare workers to educators and community leaders, we work together to create sustainable solutions for childhood malnutrition.</p>
+        <p data-aos="fade-up" data-aos-delay="100">Our team consists of passionate student developers from Providence College Of Engineering who came together during the Genesis national-level hackathon to create Poshan Care. With diverse skills in web development, design, and problem-solving, we collaborated over 24 intense hours to build this platform aimed at combating childhood malnutrition in India.</p>
         
         <div class="team-grid">
             <div class="team-member" data-aos="fade-up" data-aos-delay="100">
                 <div class="team-info">
-                    <h3>Person XYZ</h3>
-                    <p>Founder & Director</p>
+                    <h3>Jacob Mathew</h3>
+                    
                     <div class="team-social">
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -736,8 +736,7 @@
             </div>
             <div class="team-member" data-aos="fade-up" data-aos-delay="200">
                 <div class="team-info">
-                    <h3>Person ABC</h3>
-                    <p>Nutrition Specialist</p>
+                    <h3>Amith Sahadevan</h3>
                     <div class="team-social">
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -747,8 +746,17 @@
             </div>
             <div class="team-member" data-aos="fade-up" data-aos-delay="300">
                 <div class="team-info">
-                    <h3>Person PQR</h3>
-                    <p>Community Outreach</p>
+                    <h3>Vishal Mathew Praveen</h3>
+                    <div class="team-social">
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fas fa-envelope"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="team-member" data-aos="fade-up" data-aos-delay="400">
+                <div class="team-info">
+                    <h3>Shan John</h3>
                     <div class="team-social">
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
