--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         }
 
         nav a {
-            color: var(--primary-dark);
+            color: #298877;
             text-decoration: none;
             font-weight: 500;
             font-size: 16px;
