--- a/donate.html
+++ b/donate.html
@@ -95,17 +95,17 @@
         .logo-text {
             font-size: 28px;
             font-weight: 700;
-            color: var(--white);
+            color: 00796b;
         }
 
         .poshan {
             font-family: 'Samarkan', cursive;
-            color: var(--white);
+            color:var(--primary);
             margin-right: 5px;
         }
 
         .care {
-            color: var(--white);
+            color: var(--primary-dark);
         }
 
         nav {
@@ -114,7 +114,7 @@
         }
 
         nav a {
-            color: var(--white);
+            color: #298877;
             text-decoration: none;
             font-weight: 500;
             font-size: 16px;
